--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Plankkalkulator",
   "short_name": "PlankCalc",
   "lang": "no",
-  "start_url": "./index.html",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#f3f4f6",
   "theme_color": "#2563eb",
